[project]
name = "audion-mcp-server"
version = "0.1.0"
description = "MCP Server for Audion voice understanding and highlighting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.11.0",
]

[project.scripts]
audion-mcp-server = "audion_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]